scaner e dexa save to db

--- a/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
+++ b/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
@@ -30,7 +30,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peso | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number">
+                            <input  class="hidde-arrows" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -38,7 +38,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number">
+                            <input class="hidde-arrows" name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -46,7 +46,7 @@
                         <td *ngIf="pointer>=1">{{+evaluation[pointer-1].gordura_total  | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{+evaluation[pointer].gordura_total | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="gordura_total" #gordura_total="ngModel" [(ngModel)]="newEvaluation.gordura_total" type="number">
+                            <input class="hidde-arrows" name="gordura_total" #gordura_total="ngModel" [(ngModel)]="newEvaluation.gordura_total" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -54,7 +54,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_gorda | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].massa_gorda | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="massa_gorda" #massa_gorda="ngModel" [(ngModel)]="newEvaluation.massa_gorda" type="number">
+                            <input class="hidde-arrows" name="massa_gorda" #massa_gorda="ngModel" [(ngModel)]="newEvaluation.massa_gorda" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -62,7 +62,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_magra | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].massa_magra | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="massa_magra" #massa_magra="ngModel" [(ngModel)]="newEvaluation.massa_magra" type="number">
+                            <input class="hidde-arrows" name="massa_magra" #massa_magra="ngModel" [(ngModel)]="newEvaluation.massa_magra" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -70,7 +70,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="gordura_visceral" #gordura_visceral="ngModel"
+                            <input class="hidde-arrows" name="gordura_visceral" #gordura_visceral="ngModel"
                                 [(ngModel)]="newEvaluation.gordura_visceral" type="number">
                         </td>
                     </tr>
@@ -78,11 +78,11 @@
                     <tr><th class="form-subtitle">Massa Muscular</th></tr>
                     <tr>
                         <th><span (click)="openDialog('Membros Superiores Dir')">Membros Superiores Dir <small>(kg)</small></span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].mm_supd | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].mm_supd | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].mm_msupd | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].mm_msupd | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="mm_supd" #mm_supd="ngModel"
-                                [(ngModel)]="newEvaluation.mm_supd" type="number">
+                            <input class="hidde-arrows" name="mm_msupd" #mm_msupd="ngModel"
+                                [(ngModel)]="newEvaluation.mm_msupd" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -90,7 +90,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].mm_msupe | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].mm_msupe | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="mm_msupe" #mm_msupe="ngModel"
+                            <input class="hidde-arrows" name="mm_msupe" #mm_msupe="ngModel"
                                 [(ngModel)]="newEvaluation.mm_msupe" type="number">
                         </td>
                     </tr>
@@ -99,7 +99,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].mm_minfd | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].mm_minfd | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="mm_minfd" #mm_minfd="ngModel"
+                            <input class="hidde-arrows" name="mm_minfd" #mm_minfd="ngModel"
                                 [(ngModel)]="newEvaluation.mm_minfd" type="number">
                         </td>
                     </tr>
@@ -108,7 +108,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].mm_minfe | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].mm_minfe | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="mm_minfe" #mm_minfe="ngModel"
+                            <input class="hidde-arrows" name="mm_minfe" #mm_minfe="ngModel"
                                 [(ngModel)]="newEvaluation.mm_minfe" type="number">
                         </td>
                     </tr>
@@ -117,7 +117,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].mm_tronco | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].mm_tronco | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="mm_tronco" #mm_tronco="ngModel"
+                            <input class="hidde-arrows" name="mm_tronco" #mm_tronco="ngModel"
                                 [(ngModel)]="newEvaluation.mm_tronco" type="number">
                         </td>
                     </tr>
@@ -126,7 +126,9 @@
                         <th><span (click)="openDialog('Taxa Metabólica Basal')">Taxa Metabólica Basal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].tmb | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].tmb | number: '': locale}}</td>
-                        <td *ngIf="addEval">&nbsp;
+                        <td *ngIf="addEval">
+                            <input class="hidde-arrows" name="tmb" #tmb="ngModel" [(ngModel)]="newEvaluation.tmb"
+                                [value]="calcTMB(newEvaluation)" type="number" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -134,7 +136,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].reactancia | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].reactancia | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="reactancia" #reactancia="ngModel" [(ngModel)]="newEvaluation.reactancia"
+                            <input class="hidde-arrows" name="reactancia" #reactancia="ngModel" [(ngModel)]="newEvaluation.reactancia"
                                 type="number">
                         </td>
                     </tr>
@@ -143,7 +145,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].estrutura_ossea | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].estrutura_ossea | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="estrutura_ossea" #estrutura_ossea="ngModel"
+                            <input class="hidde-arrows" name="estrutura_ossea" #estrutura_ossea="ngModel"
                                 [(ngModel)]="newEvaluation.estrutura_ossea" type="number">
                         </td>
                     </tr>
@@ -152,7 +154,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso_desejado | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peso_desejado | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="peso_desejado" #peso_desejado="ngModel"
+                            <input class="hidde-arrows" name="peso_desejado" #peso_desejado="ngModel"
                                 [(ngModel)]="newEvaluation.peso_desejado" type="number">
                         </td>
                     </tr>
@@ -160,16 +162,18 @@
                         <th><span (click)="openDialog('Nível de Atividade Física')">Nível de Atividade Física</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].naf | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].naf | number: '': locale}}</td>
-                        <td *ngIf="addEval">%&nbsp;
+                        <td *ngIf="addEval">
+                            <input class="hidde-arrows" name="naf" #naf="ngModel"
+                                [(ngModel)]="newEvaluation.naf" type="number" readonly>
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Água Extracelular')">Água Extracelular <small>(kg)</small></span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].agua_corporal_total | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].agua_corporal_total | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].agua_extracelular | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].agua_extracelular | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="agua_corporal_total" #agua_corporal_total="ngModel"
-                                [(ngModel)]="newEvaluation.agua_corporal_total" type="number">
+                            <input class="hidde-arrows" name="agua_extracelular" #agua_extracelular="ngModel"
+                                [(ngModel)]="newEvaluation.agua_extracelular" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -177,7 +181,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].agua_corporal_total | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].agua_corporal_total | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="agua_corporal_total" #agua_corporal_total="ngModel"
+                            <input class="hidde-arrows" name="agua_corporal_total" #agua_corporal_total="ngModel"
                                 [(ngModel)]="newEvaluation.agua_corporal_total" type="number">
                         </td>
                     </tr>
@@ -186,25 +190,25 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].impedancia | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].impedancia | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="impedancia" #impedancia="ngModel" [(ngModel)]="newEvaluation.impedancia"
+                            <input class="hidde-arrows" name="impedancia" #impedancia="ngModel" [(ngModel)]="newEvaluation.impedancia"
                                 type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Relação AT/AEC')">Relação AT/AEC</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].impedancia | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].impedancia | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].relacao_ataec | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].relacao_ataec | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="number" name="impedancia" #impedancia="ngModel" [(ngModel)]="newEvaluation.impedancia"
+                            <input class="hidde-arrows" name="relacao_ataec" #relacao_ataec="ngModel" [(ngModel)]="newEvaluation.relacao_ataec"
                                 type="number">
                         </td>
                     </tr>
-                    <tr>
+<!--                     <tr>
                         <th><span>Classificação</span></th>
                         <td *ngIf="pointer>=1">TO DO</td>
                         <td *ngIf="pointer>=0">TO DO</td>
                         <td *ngIf="addEval">&nbsp;</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
 
