--- a/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
+++ b/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
@@ -10,12 +10,12 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th class="th-top" *ngIf="pointer>=1">
-                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
+                            <button type="button">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                             </button>
                         </th>
                         <th class="th-top" *ngIf="pointer>=0">
-                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer])">
+                            <button type="button">
                                 {{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                             </button>
                         </th>
@@ -35,124 +35,124 @@
                     </tr>
                     <tr>
                         <th>% Gordura</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number">
+                            <input class="hidde-arrows" name="perc_gordura" #perc_gordura="ngModel" [(ngModel)]="newEvaluation.perc_gordura" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>DMO <small>(g/cm2)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].dmo | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].dmo | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number">
+                            <input class="hidde-arrows" name="dmo" #dmo="ngModel" [(ngModel)]="newEvaluation.dmo" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>FAT <small>(g)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_gorda | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].massa_gorda | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fat | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].fat | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="massa_gorda" #massa_gorda="ngModel" [(ngModel)]="newEvaluation.massa_gorda" type="number">
+                            <input class="hidde-arrows" name="fat" #fat="ngModel" [(ngModel)]="newEvaluation.fat" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>LEAN <small>(g)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_magra | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].massa_magra | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].lean | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].lean | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="massa_magra" #massa_magra="ngModel" [(ngModel)]="newEvaluation.massa_magra" type="number">
+                            <input class="hidde-arrows" name="lean" #lean="ngModel" [(ngModel)]="newEvaluation.lean" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Cabeça</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cabeca | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].cabeca | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="gordura_visceral" #gordura_visceral="ngModel"
-                                [(ngModel)]="newEvaluation.gordura_visceral" type="number">
+                            <input class="hidde-arrows" name="cabeca" #cabeca="ngModel"
+                                [(ngModel)]="newEvaluation.cabeca" type="number">
                         </td>
                     </tr>
 
                     <tr>
                         <th>Membros Superiores</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].membros_sup | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].membros_sup | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="gordura_visceral" #gordura_visceral="ngModel"
-                                [(ngModel)]="newEvaluation.gordura_visceral" type="number">
+                            <input class="hidde-arrows" name="membros_sup" #membros_sup="ngModel"
+                                [(ngModel)]="newEvaluation.membros_sup" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Membros Inferiores</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].membros_inf | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].membros_inf | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="gordura_visceral" #gordura_visceral="ngModel"
-                                [(ngModel)]="newEvaluation.gordura_visceral" type="number">
+                            <input class="hidde-arrows" name="membros_inf" #membros_inf="ngModel"
+                                [(ngModel)]="newEvaluation.membros_inf" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Coluna</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].coluna | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].coluna | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="gordura_visceral" #gordura_visceral="ngModel"
-                                [(ngModel)]="newEvaluation.gordura_visceral" type="number">
+                            <input class="hidde-arrows" name="coluna" #coluna="ngModel"
+                                [(ngModel)]="newEvaluation.coluna" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Tronco</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tronco | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].tronco | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="gordura_visceral" #gordura_visceral="ngModel"
-                                [(ngModel)]="newEvaluation.gordura_visceral" type="number">
+                            <input class="hidde-arrows" name="tronco" #tronco="ngModel"
+                                [(ngModel)]="newEvaluation.tronco" type="number">
                         </td>
                     </tr>
 
                     <tr>
                         <th>Pelve</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tmb | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].tmb | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].pelve | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].pelve | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="tmb" #tmb="ngModel" [(ngModel)]="newEvaluation.tmb" type="number">
+                            <input class="hidde-arrows" name="pelve" #pelve="ngModel" [(ngModel)]="newEvaluation.pelve" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Costelas</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].reactancia | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].reactancia | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].costelas | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].costelas | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="reactancia" #reactancia="ngModel" [(ngModel)]="newEvaluation.reactancia"
+                            <input class="hidde-arrows" name="costelas" #costelas="ngModel" [(ngModel)]="newEvaluation.costelas"
                                 type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Total</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].estrutura_ossea | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].estrutura_ossea | number: '': locale}}</td>
-                        <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="estrutura_ossea" #estrutura_ossea="ngModel"
-                                [(ngModel)]="newEvaluation.estrutura_ossea" type="number">
+                        <td *ngIf="pointer>=1">{{getTotal(evaluation[pointer-1]) | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{getTotal(evaluation[pointer]) | number: '': locale}}</td>
+                        <td *ngIf="addEval">&nbsp;
+                       <!--      <input class="hidde-arrows" name="tescore" #tescore="ngModel"
+                                [(ngModel)]="newEvaluation.tescore" type="number"> -->
                         </td>
                     </tr>
                     <tr>
                         <th>T escore</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso_desejado | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].peso_desejado | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tescore | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].tescore | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="peso_desejado" #peso_desejado="ngModel"
-                                [(ngModel)]="newEvaluation.peso_desejado" type="number">
+                            <input class="hidde-arrows" name="tescore" #tescore="ngModel"
+                                [(ngModel)]="newEvaluation.tescore" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Z escore</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].naf | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].naf | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].zescore | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].zescore | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="naf" #naf="ngModel" [(ngModel)]="newEvaluation.naf" type="number">
+                            <input class="hidde-arrows" name="zescore" #zescore="ngModel" [(ngModel)]="newEvaluation.zescore" type="number">
                         </td>
                     </tr>
               
